--- a/ActiveDirectoryApi/ActiveDirectoryApi.csproj
+++ b/ActiveDirectoryApi/ActiveDirectoryApi.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ADAPIService\ADAPIService.csproj" />
+  </ItemGroup>
+
 </Project>
