add adobject post request

--- a/ADAPIReposetory/ADAPIRepository.csproj
+++ b/ADAPIReposetory/ADAPIRepository.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.DirectoryServices" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ADAPICommon\ADAPICommon.csproj" />
+  </ItemGroup>
+
 </Project>
