--- a/ADAPIService/ADAPIService.csproj
+++ b/ADAPIService/ADAPIService.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ADAPICommon\ADAPICommon.csproj" />
     <ProjectReference Include="..\ADAPIReposetory\ADAPIRepository.csproj" />
   </ItemGroup>
 
