add dependency injection

--- a/ADAPICommon/ADAPICommon.csproj
+++ b/ADAPICommon/ADAPICommon.csproj
@@ -1,15 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="implementions\" />
-    <Folder Include="interfaces\" />
+    <Compile Remove="implementions\**" />
+    <Compile Remove="interfaces\**" />
+    <EmbeddedResource Remove="implementions\**" />
+    <EmbeddedResource Remove="interfaces\**" />
+    <None Remove="implementions\**" />
+    <None Remove="interfaces\**" />
   </ItemGroup>
 
 </Project>
