--- a/ADAPIService/ADAPIService.csproj
+++ b/ADAPIService/ADAPIService.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ADAPICommon\ADAPICommon.csproj" />
     <ProjectReference Include="..\ADAPIReposetory\ADAPIRepository.csproj" />
   </ItemGroup>
