add appsetting configurations

--- a/ActiveDirectoryApi/appsettings.json
+++ b/ActiveDirectoryApi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ActiveDirectory": {
+    "ObjectType": "OrganizationalUnit",
+    "LDAPPath": "DC=osher,DC=lab",
+    "OU": "Ou",
+    "CN": "Cn"
+  }
 }
